<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Villanova COVID-19 Risk Checker</string>
    <string name="about">About</string>
    <string name="about_desc">Health calculator is presented for your own personal use and is to be used as a guide only. Medical and other decisions should not be based on the results of this calculator. Although this calculator has been tested, we cannot guarantee the accuracy of its calculations or results.</string>
    <string name="acceptable">Acceptable</string>
    <string name="action_about">About</string>
    <string name="action_important">Rate</string>
    <string name="activity">Activity</string>
    <string name="settingsSMS">Text Message Alerting</string>
    <string name="age">Age :</string>
    <string name="alcohol_chart">Blood Alcohol Chart</string>
    <string name="alcohollevel">Drink\'s Alcohol Level :</string>
    <string name="apr">April</string>
    <string name="assessment">Assessment:</string>
    <string name="aug">August</string>
    <string name="avg_cal">Average Calories</string>
    <string name="bac_header">The most accurate way to measure your Blood Alcohol Concentration (BAC) or alcohol level is to use a breathalyzer, but sometimes one is not readily available. In cases like this, use the charts below to plan for how many drinks you should limit yourself to.\n\nMultiply your weight in kg by 2.2 to get your weight in lbs using the calculator above.</string>
    <string name="back_text">Back</string>
    <string name="beats">beats/minute</string>
    <string name="blddondesc">You should be in good health and atleast 17 years old with a body weight of 50 kg or 110 pounds.</string>
    <string name="blood_don_desc">Calculate your next eligible donation date</string>
    <string name="blood_donate">Blood Donation</string>
    <string name="bloodalcohol">Blood Alcohol</string>
    <string name="bloodalcohol_desc">Level of alcohol content in blood</string>
    <string name="bloodvol">Blood Volume</string>
    <string name="bloodvol_desc">Volume of blood of any individual</string>
    <string name="bloodvol_header">This additional guideline has been introduced to minimise the risk of feeling unwell or faint after giving blood.</string>
    <string name="bmi_chart">To find your BMI, locate where your height and weight intersect; your BMI is listed in the square</string>
    <string name="bmi_desc">Shows whether people have the right weight for their height</string>
    <string name="bmi_title">Body Mass Index</string>
    <string name="bmiis">Your Body Mass Index is</string>
    <string name="bodyfat">Body Fat</string>
    <string name="bodyfat_desc">A measure of fitness level of an individual</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonAdd">+</string>
    <string name="buttonClear">Clear</string>
    <string name="buttonDecimalPoint">.</string>
    <string name="buttonDivide">/</string>
    <string name="buttonEquals">=</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonSubtract">-</string>
    <string name="calc">Calculator</string>
    <string name="calculate">Calculate</string>
    <string name="calorie_chart_header">Estimated Calorie Needs per Day, by Age, Sex, and Physical Activity Level</string>
    <string name="calorie_desc">Calculate your daily calorie requirements for weight gain/loss</string>
    <string name="calories">Calories for weight gain/loss</string>
    <string name="caloriesval">calories</string>
    <string name="cancel_text">Cancel</string>
    <string name="canidonate">Can I Donate?</string>
    <string name="canigiveblood_desc">‣ Male donors could be eligible to give blood at a maximum frequency of every 12 weeks (4 times per year) but normally less often.\n\n‣ Female donors could be eligible to give blood at a maximum frequency of every 16 weeks (3 times per year) but normally less often.\n\n‣ Women between the ages of 17 and 19 who weigh less than 10 stone 3lbs (65kg) and whose height is below 5 feet 6 inches (168cm) need to have their blood volume estimated before giving blood. Please see the chart below. If your blood volume is within the shaded area you will be unable to donate until after your 20th birthday.</string>
    <string name="case3">18.6 – 25</string>
    <string name="case4">25.1 – 30</string>
    <string name="case5">30.1 – 35</string>
    <string name="case6">35.1 – 40</string>
    <string name="case7">40+</string>
    <string name="category">Category</string>
    <string name="centimeters">Centimeters</string>
    <string name="chart">BMI chart</string>
    <string name="chart_calorie">Daily Calorie Chart</string>
    <string name="chart_giving_blood">Blood Volume Chart</string>
    <string name="chart_ovulation">Menstrual Cycle Calendar</string>
    <string name="chart_water">Daily Water Intake Chart</string>
    <string name="choosedate">Choose Date</string>
    <string name="cm">cm</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="connection_problem">Connection Problem!</string>
    <string name="copyright">&#169; 2020 Villanova College of Engineering</string>
    <string name="covid_assessment">COVID-19 Risk Assessment</string>
    <string name="covid_risk">COVID-19 Risk is: </string>
    <string name="cup">cup</string>
    <string name="dailywaterreq">Your daily water requirement is</string>
    <string name="datechoosen">Date Chosen :</string>
    <string name="day">Day</string>
    <string name="dec">December</string>
    <string name="dwrdesc">Take 2 – 3 glasses of water additionally if you exercise or if your environmental conditions are hot.</string>
    <string name="edddesc">The due date calculation is based on the average 28-day cycle.</string>
    <string name="edddesc2">This calculation is based on the average 28-day cycle.</string>
    <string name="eligibility_check">Eligibility to donate</string>
    <string name="enterblddon">Choose the date of last donation</string>
    <string name="entercm">You must be over 153 cm to calculate ideal weight</string>
    <string name="enterfeet">You must be over 5 feet to calculate ideal weight</string>
    <string name="enterpregdate">Choose the 1st day of your last menstrual period</string>
    <string name="essential">Essential % of fat</string>
    <string name="extremely_active">Very Hard</string>
    <string name="exunder">Extremely under weight</string>
    <string name="fat_chart">Body Fat Chart</string>
    <string name="fat_header">As you can see below, you have the body fat percentage chart for women and now men (below) that you need to input the numbers from your measurements using calipers.</string>
    <string name="feb">February</string>
    <string name="feets">Foot</string>
    <string name="female">Female</string>
    <string name="forearm">Forearm</string>
    <string name="fullname">Full Name</string>
    <string name="forgot">Forgot Password?</string>
    <string name="logout">Logout</string>
    <string name="age2">Age</string>
    <string name="register">Register</string>
    <string name="ft">ft</string>
    <string name="gender">Gender</string>
    <string name="glasses">Glasses</string>
    <string name="go">Go</string>
    <string name="hard">Very Hard</string>
    <string name="health">Health Status Indicators</string>
    <string name="health_desc">Achieve optimum health with our recommendations for fitness and diet</string>
    <string name="healthy_weight_desc">Keep up the good work! For tips on maintaining a healthy weight, check out the food and diet and fitness sections.</string>
    <string name="healthy_weight_header">Healthy weight</string>
    <string name="heart_chart">Target Heart Rate Chart</string>
    <string name="heart_chart_desc">When you monitor your heart rate during physical exercise and stay within your target heart rate zone, you reap the most health benefits and lessen your risk of injury.</string>
    <string name="heart_desc">Pulse rate to target during aerobic exercise based on age</string>
    <string name="heartrate">Target Heart Rate</string>
    <string name="height">Height</string>
    <string name="hip">Hip</string>
    <string name="hour">Hour</string>
    <string name="hypen">-</string>
    <string name="ideal_chart">Ideal Weight Chart</string>
    <string name="idealweight">Ideal Weight</string>
    <string name="idealweight_desc">Weight that is believed to be maximally healthful for a person</string>
    <string name="in">in</string>
    <string name="inches">Inches</string>
    <string name="intensity">Workout Intensity :</string>
    <string name="iwc_header">The three most popular formulas for calculating ideal weight are the Devine, Robinson and Miller formulas.\n\nWeight in lbs (kg)</string>
    <string name="jan">January</string>
    <string name="jul">July</string>
    <string name="jun">June</string>
    <string name="kg">kg</string>
    <string name="kilograms">Kilograms</string>
    <string name="lbs">lbs</string>
    <string name="lightly_active">Little</string>
    <string name="litres">Liters</string>
    <string name="little_diff">Moderate</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="maintain_weight">Maintain Weight</string>
    <string name="male">Male</string>
    <string name="mar">March</string>
    <string name="maxhrrate">Your maximun heart rate is</string>
    <string name="may">May</string>
    <string name="may_not_give">You may not give blood if:</string>
    <string name="risk_elevated">Risk: Elevated (RIS level between 0 and 50)</string>
    <string name="risk_elevated_graf">The patient shows a modest level of COVID-19 indicator symptoms.  The patient should be monitored but immediate action is not recommended.</string>
    <string name="risk_moderate">Risk: Moderate (RIS level between 50 and 100)</string>
    <string name="risk_moderate_graf">The patient shows a medium level of COVID-19 indicator symptoms.  Should subsequent readings persist in this range, We would advise a doctor or caregiver to be contacted to determine an action plan.</string>
    <string name="risk_low">Risk: Low (RIS level below 0)</string>
    <string name="risk_low_graf">No COVID-19 indicator symptoms are currently being detected.</string>
    <string name="risk_high">Risk: High (RIS level greater than 100)</string>
    <string name="risk_high_graf">The patient shows a dangerous level of COVID-19 indicator symptoms.  Treatment at a medical facility is advised.</string>
    <string name="banner_ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="todo">TODO</string>
    <string name="settingsheader">COVID-19 RIS Monitoring Settings</string>
    <string name="slider_desc">Change RIS sample interval</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>