<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/mAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:theme="@style/ToolbarTheme">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/todo"
                    android:scaleX="-1"
                    android:src="@drawable/arrow_orange" />


                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/popind_regular"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/covid_assessment"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/bg"
        android:scrollbars="none">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="@dimen/card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="0dp"
                    android:weightSum="2"/>


                <TextView
                    android:id="@+id/lowRiskHead"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/risk_low"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/lowRisk"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/risk_low_graf"
                     />
                <TextView
                    android:id="@+id/elevatedRiskHead"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/risk_elevated"
                    android:layout_marginTop="30dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/elevatedRisk"
                    android:layout_width="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_height="match_parent"
                    android:text="@string/risk_elevated_graf"/>
                <TextView
                    android:id="@+id/moderateRiskHead"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/risk_moderate"
                    android:layout_marginTop="30dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/moderateRisk"
                    android:layout_width="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_height="match_parent"
                    android:text="@string/risk_moderate_graf"/>
                <TextView
                    android:id="@+id/highRiskHead"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/risk_high"
                    android:layout_marginTop="30dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/highRisk"
                    android:layout_width="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_height="match_parent"
                    android:text="@string/risk_high_graf"/>



            </LinearLayout>


        </androidx.cardview.widget.CardView>





    </androidx.core.widget.NestedScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/adview_height"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/banner_ad_id" />
</LinearLayout>
